# test_gh_actions

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindFFTW.cmake  IlpOceanFetchFFTW.cmake  tphConfig.cmake.in
tph/: CMakeLists.txt
tph/bar/: CMakeLists.txt  bar.cc  bar.h  bar_test.cc
tph/foo/: CMakeLists.txt  foo.cc  foo.h  foo_test.cc
